syntax = "proto3";

package yandex.spqr.shards;

option go_package = "yandex/app/shards";

service ShardService {
  rpc ListShards (ShardRequest) returns (ShardReply) {}
}

message ShardRequest {
}

message ShardReply {
	repeated string shards = 1;
}

